@@ -80,6 +80,11 @@
         "img/wsgf/ws-limited.png",
         "img/wsgf/ws-incomplete.png",
         "img/wsgf/ws-unsupported.png",
+        "img/sr/banned.png",
+        "img/sr/caution.png",
+        "img/sr/donate.png",
+        "img/sr/okay.png",
+        "img/sr/valve.png",
         "img/profile_styles/green/header.jpg",
         "img/profile_styles/green/showcase.png",
         "img/profile_styles/green/style.css",
